QQuickLoader: Check for QQmlEngine before using it

The loader's context may have been removed from the context hierarchy or
it may not have a context in the first place. We should not crash then.

Fixes: QTBUG-67950
Change-Id: I1058d5b1f978aa040f8b2f018c4357dd7a3ef333
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 79e885537f8546a18d7d9d902d6efe40b1915c96)